--- a/.gitignore
+++ b/.gitignore
@@ -12,14 +12,8 @@ __pycache__/
 *.so
 .Python
 env/
+venv/
 build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
 parts/
 sdist/
 var/
